fix: auto left margin -1px caused uneven element distribution within div container

--- a/app/rq1/static/v2.css
+++ b/app/rq1/static/v2.css
@@ -85,6 +85,11 @@ table th + th {
     border-left: none !important;
 }
 
-* { 
+/* * { 
 	outline: 1px solid red;
+} */
+
+.btn-setting.dropdown-toggle::after {
+    display: none;
 }
+
